# api-service/src/main/java/be/reaktika/vives/api/web/controller/OrderApiDelegate.java
@@ -2,13 +2,16 @@ package be.reaktika.vives.api.web.controller;
 
 import be.reaktika.vives.api.ports.SalesPort;
 import be.reaktika.vives.furniture.api.model.product.Order;
+import be.reaktika.vives.furniture.api.model.product.OrderConfirmation;
 import be.reaktika.vives.service.sales.orders.model.ConfirmedOrder;
+import be.reaktika.vives.service.sales.orders.model.OrderItem;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class OrderApiDelegate implements be.reaktika.vives.furniture.api.product.OrderApiDelegate {
@@ -21,10 +24,27 @@ public class OrderApiDelegate implements be.reaktika.vives.furniture.api.product
     }
 
     @Override
-    public ResponseEntity<Void> orderItem(List<Order> order) {
-        logger.info("ordering from the sales service");
-        ConfirmedOrder confirmation = sales.orderItems(order).block();
-        logger.info("confirmation received " + confirmation);
-        return be.reaktika.vives.furniture.api.product.OrderApiDelegate.super.orderItem(order);
+    public ResponseEntity<OrderConfirmation> orderItem(List<Order> order) {
+        logger.info("Received order, forwarding to the sales service");
+        var confirmedOrder = sales.orderItems(order).block();
+        logger.info("confirmation received " + confirmedOrder);
+        var orderConfirmation = mapToResponse(confirmedOrder);
+        return ResponseEntity.ok(orderConfirmation);
+    }
+
+    private OrderConfirmation mapToResponse(ConfirmedOrder confirmedOrder) {
+        return new OrderConfirmation()
+                .orderId(confirmedOrder.orderId())
+                .orders(confirmedOrder.request()
+                        .orderdItems().stream()
+                        .map(this::mapToResponse)
+                        .collect(Collectors.toList()));
+
+    }
+
+    private Order mapToResponse(OrderItem item) {
+       return new Order()
+               .productId(item.productId())
+               .quantity(item.quantity());
     }
 }
